; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/yd68/extr_yd68.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/yd68/extr_yd68.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@DDRD = common dso_local global i32 0, align 4
@PORTD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %5 = shl i32 1, %4
  %6 = and i32 %3, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i32, i32* @DDRD, align 4
  %10 = or i32 %9, 16
  store i32 %10, i32* @DDRD, align 4
  %11 = load i32, i32* @PORTD, align 4
  %12 = and i32 %11, -17
  store i32 %12, i32* @PORTD, align 4
  br label %18

13:                                               ; preds = %1
  %14 = load i32, i32* @DDRD, align 4
  %15 = or i32 %14, 16
  store i32 %15, i32* @DDRD, align 4
  %16 = load i32, i32* @PORTD, align 4
  %17 = or i32 %16, 16
  store i32 %17, i32* @PORTD, align 4
  br label %18

18:                                               ; preds = %13, %8
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @led_set_user(i32 %19)
  ret void
}

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
